# Simulator

./: .gitignore  README.md  activity.py  automatic.py  common.py  computer_profiles.py  consumption_profiles.py  device.py  dhtlogger.py  door.py  graph.py  house_state.py  log.py  main.py  models.py  point.py  prediction.py  pyproject.toml  read.py  read_scenario.csv  sensor.py  sensor_map.json  sim.py  sm_pc_log.csv  smartmeter.py  timer.py  utils.py  wall.py
LLM/smartmeter/Coffee_machine/: main.py
LLM/smartmeter/Computer/: main.py
LLM/smartmeter/Computer/computer_case_output/: cases_evaluation_k2.csv  llm_runtime_cycles.pkl  llm_runtime_input.tsv  optimal_k_report.txt  selected_case_latest_incomplete_day.csv
LLM/smartmeter/Dishwasher/: main.py
LLM/smartmeter/Refrigerator/: main.py
LLM/smartmeter/Washing_machine/: main.py
LLM/smartmeter/Washing_machine/washing_machine_output/: cases_evaluation_k4.csv  optimal_k_report.txt  (+1 more)
LLM/smartmeter/common/: cycle_pipeline.py  default_parameters.json  params.py
app/: __init__.py  context.py  logging_setup.py  save_paths.py
app/controllers/: __init__.py  llm_smartmeter.py  simulation.py
app/hardware/: __init__.py  real_sensors.py  smartmeter.py
app/io/: __init__.py  aws_diagnostic.py  aws_import.py  aws_telemetry.py  safe_dialog.py  scenario.py
app/ui/: __init__.py  bindings.py  main_ui.py
devices/: smartmeter_sm_pc.csv
houses/: prova1.csv
saves/: boh.csv  casa.csv  ooo.csv  prova2.csv  prova_sm.csv  prova_temperaturra.csv  simulation_interactions.csv
scripts/: ui_file_dialog.py
(+15 files in other folders)
