[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simulator"
version = "0.1.0"
description = "Home simulation project with sensors, logs, graphs, and LLM smart meter analysis"
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.34",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "Pillow>=10.0",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "dtaidistance>=2.3",
]

[tool.setuptools]
py-modules = [
  "activity",
  "automatic",
  "common",
  "consumption_profiles",
  "device",
  "dhtlogger",
  "door",
  "graph",
  "house_state",
  "log",
  "main",
  "models",
  "point",
  "prediction",
  "read",
  "sensor",
  "sim",
  "smartmeter",
  "timer",
  "utils",
  "wall",
]

[tool.setuptools.packages.find]
include = ["app*", "LLM*"]
